--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10591477
-spring.datasource.username=sql10591477
-spring.datasource.password=bZeTeEYGTc
+spring.datasource.url=jdbc:mysql://db4free.net:3306/testedbhaziel
+spring.datasource.username=testedbhaziel
+spring.datasource.password=123haziel
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
